--- a/packages/ramp-core/host/index.html
+++ b/packages/ramp-core/host/index.html
@@ -19,7 +19,7 @@
         <div id="app"></div>
 
         <script>
-            const map = new RAMP.Map(document.getElementById('app'), {
+            const rInstance = new RAMP.Instance(document.getElementById('app'), {
                 map: {
                     extent: {
                         xmax: -5007771.626060756,
@@ -51,8 +51,8 @@
             // start loading fixtures; this is just an example
             // TODO: fixtures specified in the config should be loaded first, then fixtures added through the API
             // TODO: remove
-            map.fixture.add('snowman');
-            map.fixture.add('gazebo');
+            rInstance.fixture.add('snowman');
+            rInstance.fixture.add('gazebo');
         </script>
     </body>
 </html>
