chore: init function
- add callback to run initRAMP function as soon as the library is loaded if the function is available on the global scope
- add eventbut to InstanceAPI

--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -15,7 +15,7 @@
         <!-- built files will be auto injected -->
 
         <script>
-            setTimeout(() => {
+            function initRAMP() {
                 const rInstance = new RAMP.Instance(document.getElementById('app'), {
                     map: {
                         extent: {
@@ -50,7 +50,7 @@
                 // TODO: remove
                 rInstance.fixture.add('snowman');
                 rInstance.fixture.add('gazebo');
-            }, 2000);
+            }
         </script>
     </body>
 </html>
