--- a/packages/ramp-core/host/index.html
+++ b/packages/ramp-core/host/index.html
@@ -10,13 +10,20 @@
         <link rel="stylesheet" href="../dist/RAMP.css" />
 
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-        <script src="../dist/RAMP.umd.js"></script>
     </head>
     <body>
         <noscript>
             <strong>We're sorry but ramp-core doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
         <div id="app"></div>
+
+        <script>
+            function initRAMP() {
+                console.log('RAMP has loaded.');
+            }
+        </script>
+
+        <script src="../dist/RAMP.umd.js"></script>
 
         <script>
             const rInstance = new RAMP.Instance(document.getElementById('app'), {
