--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -42,7 +42,25 @@
                             }
                         ],
                         initialBasemapId: 'esriImagery'
-                    }
+                    },
+                    layers: [
+                        {
+                            id: 'fancyTest',
+                            url: 'http://maps-cartes.ec.gc.ca/arcgis/rest/services/EcoGeo/EcoGeo/MapServer/9',
+                            state: {
+                                opacity: 0.8
+                            },
+                            customRenderer: {} // just to chill things out. real ramp will have all properties defaulted and filled in
+                        },
+                        {
+                            id: 'fancyTest2',
+                            url: 'http://maps-cartes.ec.gc.ca/arcgis/rest/services/EcoGeo/EcoGeo/MapServer/8',
+                            state: {
+                                opacity: 0.8
+                            },
+                            customRenderer: {} // just to chill things out. real ramp will have all properties defaulted and filled in
+                        }
+                    ]
                 });
 
                 // start loading fixtures; this is just an example
