--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -28,7 +28,7 @@
                                 latestWkid: 3857
                             }
                         },
-                        lods: [], //gapi.maps.defaultLODs(gapi.maps.defaultTileSchemas()[1]), // idx 1 = mercator
+                        lods: RAMP.geoapi.maps.defaultLODs(RAMP.geoapi.maps.defaultTileSchemas()[1]), // idx 1 = mercator
                         basemaps: [
                             {
                                 id: 'esriImagery',
