add geosearch panel part 1

--- a/packages/ramp-core/host/index.html
+++ b/packages/ramp-core/host/index.html
@@ -60,6 +60,7 @@
             // TODO: remove
             rInstance.fixture.add('snowman');
             rInstance.fixture.add('gazebo');
+            rInstance.fixture.add('geosearch');
         </script>
     </body>
 </html>
