--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -73,6 +73,7 @@
                 // TODO: remove
                 rInstance.fixture.add('snowman');
                 rInstance.fixture.add('gazebo');
+                rInstance.fixture.add('geosearch');
                 rInstance.fixture.add('appbar');
                 rInstance.fixture.add(window.hostFixtures.diligord);
             }
