add focus lists

--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -64,7 +64,14 @@
                         }
                     ],
                     fixtures: {
-                        appbar: [{ id: 'gazebo' }, { id: 'divider' }, { id: 'legend' }, { id: 'divider' }]
+                        appbar: [
+                            { id: 'gazebo' },
+                            { id: 'divider' },
+                            { id: 'legend' },
+                            { id: 'gazebo' },
+                            { id: 'legend' },
+                            { id: 'divider' }
+                        ]
                     }
                 });
 
