update grid fixture

--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -82,6 +82,7 @@
                 rInstance.fixture.add('gazebo');
                 rInstance.fixture.add('geosearch');
                 rInstance.fixture.add('appbar');
+                rInstance.fixture.add('grid');
                 rInstance.fixture.add(window.hostFixtures.diligord);
             }
         </script>
