lat/lon search mode + add geosearch to appbar

--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -101,6 +101,7 @@
                             { id: 'divider' },
                             { id: 'legend' },
                             { id: 'gazebo' },
+                            { id: 'geosearch' },
                             { id: 'legend' },
                             { id: 'divider' }
                         ]
