chore: improve lol-level fixture handling

--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -112,11 +112,11 @@
                 // TODO: fixtures specified in the config should be loaded first, then fixtures added through the API
                 // TODO: remove
                 rInstance.fixture.add('snowman');
-                rInstance.fixture.add('gazebo');
-                rInstance.fixture.add('geosearch');
+                /* rInstance.fixture.add('gazebo');
+                rInstance.fixture.add('geosearch');*/
                 rInstance.fixture.add('appbar');
-                rInstance.fixture.add('grid');
-                rInstance.fixture.add(window.hostFixtures.diligord);
+                /*rInstance.fixture.add('grid');*/
+                rInstance.fixture.add('diligord', window.hostFixtures.diligord);
             }
         </script>
     </body>
