--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -100,14 +100,10 @@
                             items: [
                                 { id: 'gazebo', options: { colour: '#54a0ff' } },
                                 'divider',
-                                'snowman-appbar-button'
-                                /* ,
-                                { id: 'divider' },
-                                { id: 'legend' },
-                                { id: 'gazebo' },
-                                { id: 'geosearch' },
-                                { id: 'legend' },
-                                { id: 'divider' } */
+                                'snowman-appbar-button',
+                                'legend',
+                                'geosearch',
+                                'divider'
                             ]
                         }
                     }
@@ -118,10 +114,10 @@
                 rInstance.fixture.add('appbar');
                 rInstance.fixture.add('snowman');
                 rInstance.fixture.add('gazebo');
-
-                /* rInstance.fixture.add('geosearch');
+                rInstance.fixture.add('geosearch');
+                rInstance.fixture.add('legend');
                 rInstance.fixture.add('grid');
-                rInstance.fixture.add('diligord', window.hostFixtures.diligord); */
+                rInstance.fixture.add('diligord', window.hostFixtures.diligord);
             }
         </script>
     </body>
