--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -124,9 +124,9 @@
             }
             function switchLang() {
                 if (rInstance.language === 'en') {
-                    rInstance.switchLanguage('fr');
+                    rInstance.setLanguage('fr');
                 } else {
-                    rInstance.switchLanguage('en');
+                    rInstance.setLanguage('en');
                 }
             }
         </script>
