add basemap selector

--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -126,6 +126,7 @@
                                 'snowman-appbar-button',
                                 'legend',
                                 'geosearch',
+                                'basemap',
                                 'divider'
                             ]
                         }
@@ -138,6 +139,7 @@
                 rInstance.fixture.add('snowman');
                 rInstance.fixture.add('gazebo');
                 rInstance.fixture.add('geosearch');
+                rInstance.fixture.add('basemap');
                 rInstance.fixture.add('legend');
                 rInstance.fixture.add('grid');
                 rInstance.fixture.add('diligord', window.hostFixtures.diligord);
