--- a/packages/ramp-core/host/index.html
+++ b/packages/ramp-core/host/index.html
@@ -135,8 +135,10 @@
                 rInstance.fixture.add('snowman');
                 rInstance.fixture.add('gazebo');
                 rInstance.fixture.add('geosearch');
+                rInstance.fixture.add('basemap');
                 rInstance.fixture.add('legend');
                 rInstance.fixture.add('grid');
+
                 rInstance.fixture.add('diligord', window.hostFixtures.diligord);
                 rInstance.fixture.add('mouruge', window.hostFixtures.mouruge);
             }
