add toggle panel function

--- a/packages/ramp-core/host/index.html
+++ b/packages/ramp-core/host/index.html
@@ -112,6 +112,7 @@
                                 'snowman-appbar-button',
                                 'legend',
                                 'geosearch',
+                                'basemap',
                                 'divider'
                             ]
                         }
