change mapnav into a fixture

--- a/packages/ramp-core/public/index.html
+++ b/packages/ramp-core/public/index.html
@@ -143,6 +143,7 @@
                 // start loading fixtures; this is just an example
 
                 rInstance.fixture.add('appbar');
+                rInstance.fixture.add('mapnav');
                 rInstance.fixture.add('snowman');
                 rInstance.fixture.add('gazebo');
                 rInstance.fixture.add('geosearch');
