--- a/packages/ramp-core/host/index.html
+++ b/packages/ramp-core/host/index.html
@@ -7,20 +7,20 @@
         <link rel="icon" href="./favicon.ico" />
         <title>ramp-core</title>
 
-        <link rel="stylesheet" href="../dist/RAMP.css" />
+        <link rel="stylesheet" href="./../dist/RAMP.css" />
 
         <!-- these two fixtures will load before either RAMP is loaded -->
-        <script src="../dist/sample-fixtures/mouruge-fixture.js"></script>
-        <script src="../dist/sample-fixtures/diligord-fixture.js"></script>
+        <script src="./../dist/sample-fixtures/mouruge-fixture.js"></script>
+        <script src="./../dist/sample-fixtures/diligord-fixture.js"></script>
 
         <!-- the host page must load Vue since RAMP doesn't bundle it -->
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
         <!-- this fixture will load after Vue is loaded; `iklob` requires Vue to be exposed on the global scope -->
-        <script src="../dist/sample-fixtures/iklob-fixture.js"></script>
+        <script src="./../dist/sample-fixtures/iklob-fixture.js"></script>
 
         <!-- loading main RAMP file; this needs to be loaded after Vue -->
-        <script src="../dist/RAMP.umd.js"></script>
+        <script src="./../dist/RAMP.umd.js"></script>
     </head>
     <body>
         <noscript>
