--- a/packages/ramp-core/host/index.html
+++ b/packages/ramp-core/host/index.html
@@ -126,7 +126,8 @@
                                 'basemap',
                                 'divider'
                             ]
-                        }
+                        },
+                        mapnav: { items: ['fullscreen', 'help', 'home', 'basemap'] }
                     }
                 });
 
@@ -140,6 +141,7 @@
                 rInstance.fixture.add('basemap');
                 rInstance.fixture.add('legend');
                 rInstance.fixture.add('grid');
+                rInstance.fixture.add('help');
 
                 rInstance.fixture.add('diligord', window.hostFixtures.diligord);
                 rInstance.fixture.add('mouruge', window.hostFixtures.mouruge);
